--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title:  V Mohammed Ibrahim # the website title (if blank, full name will be used
 first_name: V
 middle_name: Mohammed
 last_name: Ibrahim
-email: ibrahim@example.com
+email: ibrahimjkd@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
